# MyXquic

./: CMakeLists.txt
chunk_transfer/: CHUNK_TRANSFER_CODE_WALKTHROUGH.md  CMakeLists.txt  README.md  chunk_client.c  chunk_client_cb.c  chunk_client_worker.c  chunk_common.c  chunk_common.h  chunk_protocol.c  chunk_protocol.h  chunk_server.c  chunk_server_cb.c  run_concurrency_test.sh
mini/: CMakeLists.txt  mini_client.c  mini_client.h  mini_server.c
src/transport/: xqc_conn.h  xqc_engine.c  xqc_engine.h
tests/: clog  platform.h  result.txt  result1.txt  run_batch_average.sh  run_batch_batch.sh  run_batch_max.sh  run_clien_cpoy.sh  run_client.sh  run_client_diff_ports.sh  run_client_test.sh  run_server_diff_ports.sh  server.crt  server.key  test.txt  test_client.c  test_server.c  test_session  tp_localhost  xqc_token
tests/batch_average_logs_20251225_234452/: run_1.out  run_10.out  run_11.out  run_12.out  run_13.out  run_14.out  run_15.out  run_16.out  run_17.out  run_18.out  run_19.out  run_2.out  run_20.out  run_21.out  run_22.out  run_23.out  run_24.out  run_25.out  run_26.out  run_27.out  run_28.out  run_29.out  run_3.out  run_30.out  run_4.out  run_5.out  run_6.out  run_7.out  run_8.out  run_9.out  summary.csv
tests/batch_average_logs_20251226_002655/: run_1.out  run_10.out  run_11.out  run_12.out  run_13.out  run_14.out  run_15.out  run_16.out  run_17.out  run_18.out  run_19.out  run_2.out  run_20.out  run_21.out  run_22.out  run_23.out  run_24.out  run_25.out  run_26.out  run_27.out  run_28.out  run_29.out  run_3.out  run_30.out  run_4.out  run_5.out  (+5 more)
